- Added pagination functionality to collections
